// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackedBarDatum 1`] = `
.c0 {
  fill: rgb(8,104,172);
}

.c0:hover {
  fill: rgb(0,84,152);
}

<g
  class="bar-layer"
>
  <rect
    class="bar c0"
    height="10"
    width="0"
    x="0"
    y="0"
  />
  <rect
    class="bar c0"
    height="10"
    width="0"
    x="0"
    y="0"
  />
</g>
`;

exports[`StackedBarDatum 2`] = `
<rect
  class="sc-gzVnrw bar eJUvTq"
  height="10"
  width="0"
  x="0"
  y="0"
/>
`;
